--- a/mobile/cadastro_mobile.html
+++ b/mobile/cadastro_mobile.html
@@ -164,7 +164,7 @@
 
 firebase.auth().onAuthStateChanged(function(user){
     if (user) {
-        window.location.href = "home_hsqe_mobile.html";
+        window.location.href = "./home_hsqe_mobile.html";
     } 
     })
 
