--- a/mobile/home_hsqe_mobile.html
+++ b/mobile/home_hsqe_mobile.html
@@ -38,35 +38,35 @@
   <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
   <!-- Customized Bootstrap Stylesheet -->
-  <link href="./assets3/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../assets3/css/bootstrap.min.css" rel="stylesheet">
 
   <!-- Template Stylesheet -->
-  <link href="./assets3/css/style.css" rel="stylesheet">
+  <link href="../assets3/css/style.css" rel="stylesheet">
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.3/assets/owl.carousel.min.css" />
 
   <!-- bootstrap core css -->
-  <link rel="stylesheet" type="text/css" href="./assets1/css/bootstrap.css" />
+  <link rel="stylesheet" type="text/css" href="../assets1/css/bootstrap.css" />
 
   <!-- fonts style -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Poppins:400,700|Roboto:400,700&display=swap" rel="stylesheet" />
 
   <!-- Custom styles for this template -->
-  <link href="./assets1/css/style.css" rel="stylesheet" />
+  <link href="../assets1/css/style.css" rel="stylesheet" />
   <!-- responsive style -->
-  <link href="./assets1/css/responsive.css" rel="stylesheet" />
+  <link href="../assets1/css/responsive.css" rel="stylesheet" />
 
  <!-- responsive style video-->
  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@clappr/player@latest/dist/clappr.min.js"></script>
  <!-- responsive style video-->
 
 
-  <link rel="stylesheet" type="text/css" href="./assets3/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="../assets3/css/bootstrap.min.css">
 
     <link rel="stylesheet" type="text/css" href="../assets/css/font-awesome.css">
 
-    <link rel="stylesheet" href="./assets/css/templatemo-hexashop.css">
+    <link rel="stylesheet" href="../assets/css/templatemo-hexashop.css">
     
 
 
@@ -110,7 +110,7 @@
       <div class="custom_menu">
         <ul class="navbar-nav ">
           <li class="nav-item active">
-            <a class="nav-link pl-0" href="index.html"> <span class="sr-only">(current)</span></a>
+            <a class="nav-link pl-0" href="../index.html"> <span class="sr-only">(current)</span></a>
          
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item">
@@ -126,7 +126,7 @@
       </li>
       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item">
-            <a class="nav-link" href="./assets/images/Livreto_12or_a6_hd_002.pdf"><img src="./assets/images/livro1.png" style="width: 25px;" alt="_blank" /> &nbsp;Baixe o Guia: As 12 Regras de Ouro</a>
+            <a class="nav-link" href="../assets/images/Livreto_12or_a6_hd_002.pdf"><img src="../assets/images/livro1.png" style="width: 25px;" alt="_blank" /> &nbsp;Baixe o Guia: As 12 Regras de Ouro</a>
           </li>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           <li class="nav-item">
             <button class="clearAll_hseq" ondblclick="logout()">
@@ -154,7 +154,7 @@
         <div class="col-md-3 col-sm-6"><a href="https://forms.office.com/e/577AZ1Ddx5">
           <div class="content-box1 bg-s_green">
             <div class="img-box">
-              <img src="./assets/images/green.png" alt="" /> 
+              <img src="../assets/images/green.png" alt="" /> 
             </div>
             <div class="detail-box">
               <h6 style="color: rgb(27, 121, 9);">
@@ -166,7 +166,7 @@
         <div class="col-md-3 col-sm-6"><a href="https://forms.office.com/e/DLHsDTVk31">
           <div class="content-box1 bg-s_blue">
             <div class="img-box">
-              <img src="./assets/images/safety.png" alt="" />
+              <img src="../assets/images/safety.png" alt="" />
             </div>
             <div class="detail-box">
               <h6 style="color: rgb(9, 16, 121);">
@@ -179,7 +179,7 @@
         <div class="col-md-3 col-sm-6">
           <div class="content-box1 bg-s_ylw"><a href="#demo-modal">
             <div class="img-box">
-              <img src="./assets/images/yellow.png" alt="" />
+              <img src="../assets/images/yellow.png" alt="" />
             </div>
             <div class="detail-box">
               <h6 style="color: rgb(128, 126, 24);">
@@ -192,7 +192,7 @@
         <div class="col-md-3 col-sm-6"><a href="#demo-modal_anmas">
           <div class="content-box1 bg-s_anmas">
             <div class="img-box">
-              <img src="./assets/images/anmas_negative.png" style="width: 125px;" alt="" />
+              <img src="../assets/images/anmas_negative.png" style="width: 125px;" alt="" />
             </div>
             <div class="detail-box">
               <h6 style="color: aliceblue;">
@@ -205,7 +205,7 @@
       <div class="col-md-3 col-sm-6"><a href="#demo-modal_security">
         <div class="content-box1 bg-red_sec">
           <div class="img-box">
-            <img  src="./assets/images/security.png" style="width: 130px;" alt="" />
+            <img  src="../assets/images/security.png" style="width: 130px;" alt="" />
           </div>
           <div class="detail-box">
             <h6 style="color: aliceblue;">
@@ -230,7 +230,7 @@
                 <div class="left-image">
                   <div id="player" ></div>
                   <script>
-                    var player = new Clappr.Player({source: "./assets/images/memorizando 12 regras de ouro.mp4", parentId: "#player",});
+                    var player = new Clappr.Player({source: "../assets/images/memorizando 12 regras de ouro.mp4", parentId: "#player",});
                     player.resize({height: 320, width: 480});
                   </script>
              <!--     <embed type="video/mp4" src="./assets/images/memorizando 12 regras de ouro.mp4" width="480" height="320" autostart="false"> -->
@@ -252,22 +252,22 @@
 <tr>
 <td  >
   
-  <a href="#demo-modal01" style="font-size: 14px;"><img src="./assets/images/hsqe/01_Situations_a_risques.jpg" alt="Imagem" class="regras"/>&nbsp;Situação de Risco.</a><br>
-  <a href="#demo-modal02" style="font-size: 14px;"><img src="./assets/images/hsqe/02_Circulation.jpg" alt="Imagem" class="regras"/>&nbsp;Circulação.<br>
-    <a href="#demo-modal03" style="font-size: 14px;"><img src="./assets/images/hsqe/03_Gestes_Postures_Outillages.jpg" alt="Imagem" class="regras"/>&nbsp;Gestos, Posturas, Ferramentas.<br>
-      <a href="#demo-modal04" style="font-size: 14px;"><img src="./assets/images/hsqe/04_Equipements_Protec_individuelle.jpg" alt="Imagem" class="regras"/>&nbsp;Equipamento de Proteção Individual (EPI).<br>
-        <a href="#demo-modal05" style="font-size: 14px;"><img src="./assets/images/hsqe/05_Permis_de_travail.jpg" alt="Imagem" class="regras"/>&nbsp;Permissão de Trabalho.<br>
-          <a href="#demo-modal06" style="font-size: 14px;"><img src="./assets/images/hsqe/06_Operations_de_levage.jpg" alt="Imagem" class="regras"/>&nbsp;Operações de Elevação.
+  <a href="#demo-modal01" style="font-size: 14px;"><img src="../assets/images/hsqe/01_Situations_a_risques.jpg" alt="Imagem" class="regras"/>&nbsp;Situação de Risco.</a><br>
+  <a href="#demo-modal02" style="font-size: 14px;"><img src="../assets/images/hsqe/02_Circulation.jpg" alt="Imagem" class="regras"/>&nbsp;Circulação.<br>
+    <a href="#demo-modal03" style="font-size: 14px;"><img src="../assets/images/hsqe/03_Gestes_Postures_Outillages.jpg" alt="Imagem" class="regras"/>&nbsp;Gestos, Posturas, Ferramentas.<br>
+      <a href="#demo-modal04" style="font-size: 14px;"><img src="../assets/images/hsqe/04_Equipements_Protec_individuelle.jpg" alt="Imagem" class="regras"/>&nbsp;Equipamento de Proteção Individual (EPI).<br>
+        <a href="#demo-modal05" style="font-size: 14px;"><img src="../assets/images/hsqe/05_Permis_de_travail.jpg" alt="Imagem" class="regras"/>&nbsp;Permissão de Trabalho.<br>
+          <a href="#demo-modal06" style="font-size: 14px;"><img src="../assets/images/hsqe/06_Operations_de_levage.jpg" alt="Imagem" class="regras"/>&nbsp;Operações de Elevação.
  
 </td>
 
 <td >
-  <a href="#demo-modal07" style="font-size: 14px;"><img src="./assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>&nbsp;Sistemas Alimentados por Energia.<br>
-    <a href="#demo-modal08" style="font-size: 14px;"><img src="./assets/images/hsqe/08_Espaces_confines.jpg" alt="Imagem" class="regras"/>&nbsp;Espaços Confinados.<br>
-      <a href="#demo-modal09" style="font-size: 14px;"><img src="./assets/images/hsqe/09_Travaux_de_fouilles.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalhos de Escavação.<br>
-        <a href="#demo-modal10" style="font-size: 14px;"><img src="./assets/images/hsqe/10_Travaux_en_hauteur.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalhos em Altura.<br>
-          <a href="#demo-modal11" style="font-size: 14px;"><img src="./assets/images/hsqe/11_Travail_a_chaud.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalho a Quente.<br>
-            <a href="#demo-modal12" style="font-size: 14px;"><img src="./assets/images/hsqe/12_Ligne_de_danger.jpg" alt="Imagem" class="regras"/>&nbsp;Linha de Fogo.
+  <a href="#demo-modal07" style="font-size: 14px;"><img src="../assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>&nbsp;Sistemas Alimentados por Energia.<br>
+    <a href="#demo-modal08" style="font-size: 14px;"><img src="../assets/images/hsqe/08_Espaces_confines.jpg" alt="Imagem" class="regras"/>&nbsp;Espaços Confinados.<br>
+      <a href="#demo-modal09" style="font-size: 14px;"><img src="../assets/images/hsqe/09_Travaux_de_fouilles.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalhos de Escavação.<br>
+        <a href="#demo-modal10" style="font-size: 14px;"><img src="../assets/images/hsqe/10_Travaux_en_hauteur.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalhos em Altura.<br>
+          <a href="#demo-modal11" style="font-size: 14px;"><img src="../assets/images/hsqe/11_Travail_a_chaud.jpg" alt="Imagem" class="regras"/>&nbsp;Trabalho a Quente.<br>
+            <a href="#demo-modal12" style="font-size: 14px;"><img src="../assets/images/hsqe/12_Ligne_de_danger.jpg" alt="Imagem" class="regras"/>&nbsp;Linha de Fogo.
 
 </td>
 
@@ -287,20 +287,20 @@
   </footer>
   <!-- footer section -->
 
-  <script src="./assets1/js/jquery-3.4.1.min.js"></script>
-  <script src="./assets1/js/bootstrap.js"></script>
-  <script src="./assets1/js/circles.min.js"></script>
-  <script src="./assets1/js/custom.js"></script>
+  <script src="../assets1/js/jquery-3.4.1.min.js"></script>
+  <script src="../assets1/js/bootstrap.js"></script>
+  <script src="../assets1/js/circles.min.js"></script>
+  <script src="../assets1/js/custom.js"></script>
 
   <script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-app-compat.js"></script>
 	<script src="https://www.gstatic.com/firebasejs/9.6.7/firebase-auth-compat.js"></script>
 	<script scr="firebase-init.js"></script>
-	<script src="./assets3/js/jquery.min.js"></script>
-	<script src="./assets3/js/validacao.js"></script>
-    <script src="./assets3/js/popper.js"></script>
-    <script src="./assets3/js/bootstrap.min.js"></script>
-    <script src="./assets3/js/validations.js"></script>
-    <script src="./assets3/js/main.js"></script>
+	<script src="../assets3/js/jquery.min.js"></script>
+	<script src="../assets3/js/validacao.js"></script>
+    <script src="../assets3/js/popper.js"></script>
+    <script src="../assets3/js/bootstrap.min.js"></script>
+    <script src="../assets3/js/validations.js"></script>
+    <script src="../assets3/js/main.js"></script>
   
 <script>
 
@@ -334,13 +334,13 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td>
-       <a href="#demo-modal_01"><img src="./assets/images/hsqe/08_Espaces_confines.jpg" alt="Imagem" class="regras"/>Espaço Confinado</a><br>
-        <a href="#demo-modal_02"><img src="./assets/images/hsqe/06_Operations_de_levage.jpg" alt="Imagem" class="regras"/>Operação de Elevação</a><br>
-          <a href="#demo-modal_03"><img src="./assets/images/hsqe/11_Travail_a_chaud.jpg" alt="Imagem" class="regras"/>Trabalho a Quente</a><br>
-          <a href="#demo-modal_04"><img src="./assets/images/hsqe/10_Travaux_en_hauteur.jpg" alt="Imagem" class="regras"/>Trabalhos em Altura</a><br>
-          <a href="#demo-modal_05"><img src="./assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>Sistemas Desernegizados</a><br>
-          <a href="#demo-modal_06"><img src="./assets/images/hsqe/09_Travaux_de_fouilles.jpg" alt="Imagem" class="regras"/>Escavação<br>
-            <a href="#demo-modal_07"><img src="./assets/images/hsqe/Linha3.png" alt="Imagem" class="regras"/>Elétricos Desligados</a>
+       <a href="#demo-modal_01"><img src="../assets/images/hsqe/08_Espaces_confines.jpg" alt="Imagem" class="regras"/>Espaço Confinado</a><br>
+        <a href="#demo-modal_02"><img src="../assets/images/hsqe/06_Operations_de_levage.jpg" alt="Imagem" class="regras"/>Operação de Elevação</a><br>
+          <a href="#demo-modal_03"><img src="../assets/images/hsqe/11_Travail_a_chaud.jpg" alt="Imagem" class="regras"/>Trabalho a Quente</a><br>
+          <a href="#demo-modal_04"><img src="../assets/images/hsqe/10_Travaux_en_hauteur.jpg" alt="Imagem" class="regras"/>Trabalhos em Altura</a><br>
+          <a href="#demo-modal_05"><img src="../assets/images/hsqe/07_Systemes_alimentes_en_energie.jpg" alt="Imagem" class="regras"/>Sistemas Desernegizados</a><br>
+          <a href="#demo-modal_06"><img src="../assets/images/hsqe/09_Travaux_de_fouilles.jpg" alt="Imagem" class="regras"/>Escavação<br>
+            <a href="#demo-modal_07"><img src="../assets/images/hsqe/Linha3.png" alt="Imagem" class="regras"/>Elétricos Desligados</a>
 
 </td>
 
@@ -361,7 +361,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center" >
-  <a href="#"><img src="./assets/images/hsqe/r01.png" alt="Imagem" class="regras1"/></a>     
+  <a href="#"><img src="../assets/images/hsqe/r01.png" alt="Imagem" class="regras1"/></a>     
 </td>
 </tr>
 </table> 
@@ -378,7 +378,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center">     
-  <a href="#"><img src="./assets/images/hsqe/r02.png" alt="Imagem" class="regras1"/></a>
+  <a href="#"><img src="../assets/images/hsqe/r02.png" alt="Imagem" class="regras1"/></a>
       </td>
 </tr>
 </table> </table> 
@@ -395,7 +395,7 @@ firebase.auth().onAuthStateChanged(function(user){
         <table> 
 <tr>
 <td align="center">     
-  <a href="#"><img src="./assets/images/hsqe/r03.png" alt="Imagem" class="regras1"/></a>
+  <a href="#"><img src="../assets/images/hsqe/r03.png" alt="Imagem" class="regras1"/></a>
 </td>
 </tr>
 </table>
