--- a/mobile/home_hsqe_mobile.html
+++ b/mobile/home_hsqe_mobile.html
@@ -706,12 +706,12 @@ firebase.auth().onAuthStateChanged(function(user){
 <tr>
   <td>
  <div class="footer2">
-  <a href="historico.html" class="footer1-btn1-close1"> Historico Relatos </a> &ensp;&ensp;&ensp;
+  <a href="historico_mobile.html" class="footer1-btn1-close1"> Historico Relatos </a> &ensp;&ensp;&ensp;
 </div>
 </td>
 <td>
     <div class="footer">
-              <a href="anmas.html" class="footer1-btn1-close3">&ensp;&ensp; Novo Relato &ensp;&ensp;</a>
+              <a href="anmas_mobile.html" class="footer1-btn1-close4">&ensp;&ensp; Novo Relato &ensp;&ensp;</a>
     </div>
   </td>
   </tr>
