--- a/mobile/home_mobile.html
+++ b/mobile/home_mobile.html
@@ -266,7 +266,7 @@
             </div>
           </div>
         </a>  </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/ffc674eb-1a13-45c7-8f6d-56fad47de82e?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&source=portal">
+        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/ffc674eb-1a13-45c7-8f6d-56fad47de82e?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&sourcetime=2023-08-21%2012%3A57%3A46Z">
           <div class="content-box bg-com">
             <div class="img-box">
               <img src="../assets/images/compras.png" alt="" />
