--- a/Pages/pages.html
+++ b/Pages/pages.html
@@ -168,7 +168,7 @@ label:after {
             onclick="document.getElementById('modal03').style.display='block'"><p style="font-size: 5px;"></p>
         </label>
        <label for="hearts"><p style="font-size: 15px;">4 - GPTW 2023-Juntos podemos melhorar</label></p>
-	   <img src="../assets/images/v4.png" style="width:35%;cursor:zoom-in"
+	   <img src="../assets/images/v.4.png" style="width:35%;cursor:zoom-in"
 	   onclick="document.getElementById('modal04').style.display='block'"><p style="font-size: 5px;"></p> 
         </label>
 		
