--- a/home.html
+++ b/home.html
@@ -238,6 +238,22 @@
             </div>
           </div>
         </a>  </div>
+        <div class="col-md-3_ col-sm-6"><a href="https://totalworkplace-my.sharepoint.com/:f:/r/personal/fernanda_pradella_external_totalenergies_com/Documents/Guide%20Geral?csf=1&web=1&e=zgEZLb ">
+          <div class="content-box bg-azul">
+            <div class="img-box">
+              <img src="assets/images/mk.png" alt="" style="width: 42%;"/>
+            </div>
+            <div class="detail-box">
+              <h6  style="font-family: Nunito;color: azure; ">
+                Template de Apresentação Padrão TotalEnergies
+              </h6>
+              <p  style="font-family: Nunito;color: azure; font-size: 12px;">
+              Acesse nossos PPT's Padrão TotalEnergies, <br><br>nossos Logos e Pictogramas em alta qualidade.
+                
+              </p>
+            </div>
+          </div>
+        </a>   </div>
         <div class="col-md-3_ col-sm-6"><a href="https://forms.office.com/r/e3QC2ehvh4">
           <div class="content-box bg-lar">
             <div class="img-box">
@@ -271,7 +287,7 @@
             </div>
           </div>
         </a>  </div>
-        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-329e91b0-e21f-48fb-a071-456717ecc28e/a/fae89337-5ada-4da6-838a-b472219d9161?tenantId=329e91b0-e21f-48fb-a071-456717ecc28e&hint=a747893d-736f-49a7-85f3-c4184595621f&sourcetime=2023-08-28%2011%3A33%3A01Z">
+        <div class="col-md-3_ col-sm-6"><a href="https://apps.powerapps.com/play/e/default-7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e/a/ffc674eb-1a13-45c7-8f6d-56fad47de82e?tenantId=7fa199dd-6ddc-4ff4-9dd2-6b0001f2ae8e&sourcetime=2023-08-21%2012%3A57%3A46Z">
           <div class="content-box bg-com">
             <div class="img-box">
               <img src="assets/images/compras.png" alt="" />
