--- a/Pages/pages.html
+++ b/Pages/pages.html
@@ -185,11 +185,14 @@ label:after {
 		<img src="../assets/images/v5.png" style="width:35%;cursor:zoom-in"
 		onclick="document.getElementById('modal05').style.display='block'"><p style="font-size: 5px;"></p> 
 		 </label>
-		 <label for="hearts"><p style="font-size: 16px;">6 - GPTW2023</p> <p style="font-size: 12px;"> Somente juntos podemos melhorar</label></p>
-		 <img src="../assets/images/v6.png" style="width:35%;cursor:zoom-in"
+		 <label for="hearts"><p style="font-size: 16px;">6 - GPTW2023</p> <p style="font-size: 12px;"> Contamos com você!</label></p>
+		 <img src="../assets/images/v7.png" style="width:35%;cursor:zoom-in"
 		 onclick="document.getElementById('modal06').style.display='block'"><p style="font-size: 5px;"></p> 
 		  </label>
-		
+		<label for="hearts"><p style="font-size: 16px;">6 - GPTW2023</p> <p style="font-size: 12px;"> Somente juntos podemos melhorar</label></p>
+		 <img src="../assets/images/v6.png" style="width:35%;cursor:zoom-in"
+		 onclick="document.getElementById('modal07').style.display='block'"><p style="font-size: 5px;"></p> 
+		  </label>
 		
         <div class="keys"></div>
 </form>  
@@ -231,6 +234,12 @@ label:after {
     </div>
   </div>
   <div id="modal06" class="w3-modal" onclick="this.style.display='none'">
+    <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
+    <div class="w3-modal-content w3-animate-zoom " style="text-align: center;">
+        <embed type="video/mp4" src="../assets/images/7.mp4" width="500" height="340" autostart="true"> 
+    </div>
+  </div>
+	 <div id="modal07" class="w3-modal" onclick="this.style.display='none'">
     <span class="w3-button w3-hover-red w3-xlarge w3-display-topright">&times;</span>
     <div class="w3-modal-content w3-animate-zoom " style="text-align: center;">
         <embed type="video/mp4" src="../assets/images/6.mp4" width="500" height="340" autostart="true"> 
