--- a/Pages/pages.html
+++ b/Pages/pages.html
@@ -178,7 +178,7 @@ label:after {
             onclick="document.getElementById('modal03').style.display='block'"><p style="font-size: 5px;"></p>
         </label>
        <label for="hearts"><p style="font-size: 16px;">4 - GPTW2023</p> <p style="font-size: 12px;"> Juntos podemos melhorar</label></p>
-	   <img src="../assets/images/v4.png" style="width:35%;cursor:zoom-in"
+	   <img src="../assets/images/v.4.png" style="width:35%;cursor:zoom-in"
 	   onclick="document.getElementById('modal04').style.display='block'"><p style="font-size: 5px;"></p> 
         </label>
 		<label for="spades"><p style="font-size: 16px;">5 - GPTW2023</p> <p style="font-size: 12px;"> A opinião de vocês é muito importante</label><br></p>
